--- a/main/templates/inbox.html
+++ b/main/templates/inbox.html
@@ -5,24 +5,124 @@
 {% block title %}Inbox{% endblock %}
 
 {% block content %}
+<style>
+  .summary.shadow {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15);
+  }
+    .card {
+      background-color: #f8f9fa;
+      margin-bottom: 10px;
+    }
+    
+    .card-title {
+      font-size: 1.2rem;
+      margin-bottom: 0.5rem;
+    }
+    
+    .card-text {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
 
-<form method="get" action="{% url 'inbox' %}" class="form-inline p-4 text-end ">
+  
+  }
+</style>
+
+<style>
+  .card {
+    background-color: #e9ecef;
+    margin-bottom: 10px;
+    border: none;
+  }
+  
+  .card-title {
+    font-size: 1.2rem;
+    margin-bottom: 0.5rem;
+  }
+
+  .card-text {
+    font-size: 1.5rem;
+    font-weight: bold;
+  }
+
+  .open {
+    color: #28a745;
+  }
+
+  .closed {
+    color: #dc3545;
+  }
+
+  .waiting {
+    color: #ffc107;
+  }
+
+  .in-progress {
+    color: #007bff;
+  }
+  .card-deck {
+      display: flex;
+      justify-content: space-between;
+  }
+</style>
+
+<div class="card-deck mt-3">
+  <!-- All Tickets-->
+  <div class="card text-white bg-primary" style="max-width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa-solid fa-envelopes-bulk fa-lg" style="color: #f2f2f2;"></i> Total Tickets</h5>
+      <p class="card-text text-center"> {{ ticket_count }} </p>
+    </div>
+  </div>
+  <!-- Closed Tickets-->
+  <div class="card text-white bg-success" style="max-width: 14rem;">
+    <div class="card-body ">
+      <h5 class="card-title"><i class="fa-sharp fa-solid fa-envelope-circle-check fa-lg" style="color: #ffffff;"></i> Closed Tickets</h5>
+      <p class="card-text text-center"> {{ closed_count }} </p>
+    </div>
+  </div>
+  <!-- In progress Tickets-->
+  <div class="card text-white bg-warning" style="max-width: 15rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa-solid fa-spinner fa-spin-pulse fa-lg" style="color: #ffffff;"></i> In-Progress Tickets</h5>
+      <p class="card-text text-center"> {{ inprogress_count }} </p>
+    </div>
+  </div>
+  <!-- Waiting Tickets-->
+  <div class="card text-white bg-info" style="max-width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa-solid fa-circle-pause fa-beat-fade fa-lg" style="color: #ffffff;"></i> Waiting Tickets</h5>
+      <p class="card-text text-center"> {{ waiting_count }} </p>
+    </div>
+  </div>
+  <!-- Open Tickets-->
+  <div class="card text-white bg-dark" style="max-width: 14rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa-solid fa-envelope-open-text fa-shake fa-lg" style="color: #e1e9ea;"></i> Open Tickets</h5>
+      <p class="card-text text-center"> {{ open_count }} </p>
+    </div>
+  </div>
+  <!-- overdue Tickets-->
+  <div class="card text-white bg-danger" style="max-width: 16rem;">
+    <div class="card-body">
+      <h5 class="card-title"><i class="fa-solid fa-triangle-exclamation fa-beat-fade fa-lg" style="color: #ffffff;"></i> Overdue Tickets</h5>
+      <p class="card-text text-center"> {{ overdue_count }} </p>
+    </div>
+  </div>
+</div>
+
+<form method="get" action="{% url 'inbox' %}" class="form-inline p-4 text-end  ">
   <div class="form-group ">
+    <span> Status: </span>
     {{ filter_form.status }}
+    <span> Tag To: </span>
     {{ filter_form.tag_to }}
     <button type="submit" class="btn btn-sm btn-success">Filter</button>
   </div>  
 </form>
 
 
-
-<p class="text-end fw-bold">Total tickets Found: {{ ticket_count }}</p>
-<p>open {{open_count}}</p>
-<p>Last_Mile {{tag_to_count}}</p>
-
-
-
-<div class="page-header"><h1 class="mt-3 text-center" >All Tickets <i class="fa-sharp fa-solid fa-square-envelope"></i></h1></div>
+<div class="page-header"><h1 class="mb-5 text-center" >All Tickets <i class="fa-sharp fa-solid fa-square-envelope"></i></h1></div>
 
 
 <table class="table table-striped">
