--- a/main/templates/main/ticket_update_tag_form.html
+++ b/main/templates/main/ticket_update_tag_form.html
@@ -1,8 +1,7 @@
 {% load crispy_forms_tags %}
 
-<h2>Update Tag</h2>
 <form method="post" action="{% url 'ticket_update_tag' ticket.pk %}">
     {% csrf_token %}
     {{ tag_form | crispy}}
-    <button type="submit">Update Tag</button>
+    <button type="submit" class="btn btn-success btn-sm">Update Tag</button>
 </form>
