--- a/main/templates/detail.html
+++ b/main/templates/detail.html
@@ -8,52 +8,117 @@
         border-right: 4px solid Silver;
         
     }
+
+
+    .user-image {
+    background-color: blue;
+    width: 30px;
+    height: 30px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
+    font-weight: bold;
+    border-radius: 50%;
+
+}
+
+.first-letter {
+  color: #fff;
+  text-transform: uppercase;
+}
   
 </style>
-<div class="row">
-    <div class="col-lg-10 border-right p-3">
+<div class="row ">
+    <div class="col-lg-9 border-right p-3">
         <h1 class="text-center ">{{ ticket.order_id }}</h1>
         <hr style="height:2px; border: 1px;  background-color:Silver">
-        <p>Description: {{ ticket.description }}</p>
 
-        {% if ticket.post_image %}
-            <a class="p-3" href="{{ticket.post_image.url}}" target="_blank"><p>Attched File</p></a>
-        {% endif %}
-        <hr style="height:5px; border: 1px;  background-color:Silver">
-        {% comment %} <h2 class="text-center">Comments</h2> {% endcomment %}
-
-        <div >
-            <div class="comments" >
-            {% for comment in comments %}
-                <div class="text-end">
-                    <span class="text-end  font-weight-normal">
-                        {% if comment.user == user %}
-                        You Added Comment @  <small class="text-muted"> {{ comment.created }}</small>
-                        {% else %}
-                        {{ comment.user }}  Added Comment  @  <small class="text-muted"> {{ comment.created }}</small>
-                        {% endif %}
-                    </span>
-                    
-
-                    <p class="text-end pt-3">
-                        {{ comment.comment }}
+        <section >
+    <div class="container my-2 py-2">
+        <div class="row d-flex justify-content-center">
+            <div class="card">
+            <div class="card-body">
+                <div class="d-flex flex-start align-items-center">
+                    <div class="user-image me-2" style="height: 60px; width: 60px; font-size: 30px;">
+                        <span class="first-letter ">{{ ticket.owner.user|first }}</span>
+                    </div>
+                <div>
+                    <h6 class="fw-bold text-primary mb-1">{{ ticket.owner }}</h6>
+                    <p class="text-muted small mb-0">
+                        {{ ticket.created }}
                     </p>
-                    {% if comment.comment_image%}
-                        <a   href="{{comment.comment_image.url}}" target="_blank"> <p class="text-end ">Attched File</p></a>
-                    {% endif %}
-                        <hr style="height:5px; border: 1px;  background-color:Silver">
-                
                 </div>
-        
-            {% endfor %}
-        </div>
-        <form method="POST" enctype="multipart/form-data">
-        
-            {% csrf_token %}
-            {{ form | crispy }}
+                </div>
+
+                <p class="mt-3 mb-4 pb-2">
+                    {{ ticket.description }}
+                </p>
+                <div class="d-flex flex-row align-items-center ">
+                    {% if ticket.post_image%}
+                    <a   href="{{comment.post_image.url}}" target="_blank" class="text-decoration-none"> <p class="small text-muted mb-0 "> Attched file  <i class="fa-solid fa-paperclip fa-fade fa-lg"></i></p> </a>
+                    {% endif %}
+                  </div>
                 
-            <button type="submit" class="btn btn-primary  btn-sm">Add Comment</button>
-        </form> 
+            </div>
+            
+            </div>
+        </div>
+   
+  </div>
+</section>
+     
+        <hr style="height:2px; border: 1px;  background-color:Silver">
+        <div class="row d-flex justify-content-center">
+            <div class="card shadow-2 border" style="background-color: #f0f2f5;">
+                <div class="card-body p-1">
+
+                    {% for comment in comments %}
+                  <div class="card mb-2">
+                    <div class="card-body">
+
+                        <p class="text-end pt-3">{{ comment.comment }}</p>
+                        <hr style="height:2px; border: 1px;  background-color:Silver">
+                      <div class="d-flex justify-content-between">
+                        <div class="d-flex flex-row align-items-center">
+
+                            <div class="user-image">
+                                <span class="first-letter">{{ comment.user.user|first }}</span>
+                            </div>
+
+                          <p class="small mb-0 ms-2">{% if comment.user == user %}
+                            You Added Comment @  <small class="text-muted"> {{ comment.created }}</small>
+                            {% else %}
+                            {{ comment.user }}  Added Comment  @  <small class="text-muted"> {{ comment.created }}</small>
+                            {% endif %}</p>
+                        </div>
+                        
+                        <div class="d-flex flex-row align-items-center ">
+                            {% if comment.comment_image%}
+                            <a   href="{{comment.comment_image.url}}" target="_blank" class="text-decoration-none"> <p class="small text-muted mb-0 "> Attched file  <i class="fa-solid fa-paperclip fa-fade fa-lg"></i></p> </a>
+                            {% endif %}
+                          </div>
+                        
+                      </div>
+                    </div>
+                  </div>
+                  {% endfor %}
+                </div>
+            </div>
+        </div>
+    <div class="pt-5 pb-5">
+
+            <form method="POST" enctype="multipart/form-data">
+            
+                {% csrf_token %}
+                {{ form | crispy }}
+                {% if request.user.is_courier %} 
+                <button type="submit" class="btn btn-primary btn-block btn-sm">اضافة رد</button>
+                {% else %}
+                <button type="submit" class="btn btn-primary  btn-sm">Add Comment</button>
+                {% endif%} 
+                
+            </form> 
     </div>
 </div>
 
@@ -61,7 +126,7 @@
     {% if request.user.is_courier %}
         
     {% else %}
-    <div class="col-lg-2 p-3 ">
+    <div class="col-lg-3 p-3 ">
         <div id="viewers-container">
             {% include "detail_ajax.html" %}
           </div>
@@ -71,20 +136,20 @@
             <p>Currently viewing: {{ v.user }}</p>
             {% endfor %}
         {% endif %} {% endcomment %}
-        <p>Created by:  {{ ticket.owner }}</p>
-        <p>Status: {{ ticket.status }}</p>
-        <p>Assigned To: {{ ticket.assigned_to }}</p>
+        <p> <span class="fw-bold"> Created by: </span> {{ ticket.owner }}</p>
+        <p><span class="fw-bold"> Status: </span>{{ ticket.status }}</p>
+        <p> <span class="fw-bold">  Assigned To:</span> {{ ticket.assigned_to }}</p>
         {% if request.user.is_superuser or request.user.is_wh_manager or request.user.is_manager%}
             {% include 'main/ticket_update_warehouse_form.html'%}
         {% else %}
-            <p>Warehouse: {{ ticket.warehouse }}</p>
+            <p <span class="fw-bold"> >Warehouse: </span>{{ ticket.warehouse }}</p>
         {% endif %}
         
         {% if request.user.is_superuser or request.user.is_wh_manager or request.user.is_manager or request.user.is_team_leader%}
             <hr style="height:5px; border: 1px;  background-color:Silver">
             {% include 'main/ticket_update_tag_form.html' %}
         {% else %}
-        <p>Tag To: {{ ticket.tag_to }}</p>
+        <p> <span class="fw-bold"> Tag To: </span>{{ ticket.tag_to }}</p>
         {% endif %}
         <hr style="height:5px; border: 1px;  background-color:Silver">
         <p> Histroy Comming Soon.... </p>
