--- a/main/templates/registration/login.html
+++ b/main/templates/registration/login.html
@@ -1,11 +1,12 @@
 {% extends "base.html" %}
 
 {% block content %}
-<h2>Log In</h2>
+{% load crispy_forms_tags %}
+<h2 class="mt-3 page-header text-center">Log In</h2>
 <form method="post">
   {% csrf_token %}
-  {{ form.as_p }}
-  <button type="submit">Log In</button>
+  {{ form | crispy}}
+  <button class="btn btn-block btn-success" type="submit">Log In</button>
 </form>
 {% endblock content %}%}
 
